deleted some files